# powerbox

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  CONTRIBUTORS.rst  README.rst  agents.md  config.toml  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
.github/: dependabot.yml  fftw-env.yaml
.github/workflows/: deploy.yaml  run-docs-code.yaml  test-with-warnings.yaml  testsuite.yaml
.pytest_cache/v/cache/: nodeids
devel/: Untitled.ipynb  hankel_transform_of_cosmo_power.ipynb  testing_angular_averaging.ipynb
docs/: Makefile  api.rst  authors.rst  conf.py  example_toc.rst  examples.rst  index.rst  requirements.txt
docs/_static/: backend_benchmark_results.json
docs/api/: dft.rst  jax.rst  powerbox.rst  tools.rst
docs/demos/: algorithm.ipynb  backend_benchmarks.rst  benchmark_backends.py  cosmological_fields.ipynb  cuboid_boxes.rst  dft.ipynb  getting_started.ipynb  jax.rst  mpi.ipynb
paper/: paper.aux  paper.bcf  paper.bib  paper.md  paper.out  paper.run.xml  paper.tex
powerbox/: __init__.py  dft.py  fft.py  powerbox.py  tools.py
src/powerbox/: __init__.py  _fft_layout.py  _geometry.py  _hermitianity.py  config.py  dft.py  dft_backend.py  import_fft.py  powerbox.py  tools.py
src/powerbox/diff/: __init__.py  dft.py  powerbox.py  tools.py
src/powerbox/jax/: __init__.py  dft.py  powerbox.py  tools.py
tests/: test_direct.py  test_discrete.py  test_fft.py  test_hermitian.py  test_jax.py  test_lognormal.py  test_power.py  test_reality_of_deltax.py  test_shift_ordering.py  test_stats.py  test_tools.py
tests/diff/: test_direct.py  test_discrete.py  test_lognormal.py  test_power.py  test_stats.py  test_tools.py
tests/jax/: test_discrete.py  test_lognormal.py  test_power.py  test_stats.py  test_tools.py
