[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/powerbox/_version.py"
parentdir_prefix_version = "powerbox-"
fallback_version = "0.0.0"

[project]
name="powerbox"
authors=[
    {name = "Steven Murray", email = "steven.g.murray@asu.edu"}
]
description="Create arbitrary boxes with isotropic power spectra"
license= {text= "MIT"}
requires-python = ">=3.11"
keywords=["power-spectrum", "signal processing"]
dependencies = [
    "numpy>1.6.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["readme", "version"]

[project.urls]
repository="https://github.com/steven-murray/powerbox"
documentation="https://powerbox.readthedocs.io"

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[project.optional-dependencies]
fftw = [
    'pyfftw'
]

[dependency-groups]
tests = [
    "wheel",
    "flake8",
    "pytest",
    "pytest-cov",
    "scipy",
    "pyfftw",
]
docs = [
    "sphinx",
    "numpydoc",
    "nbsphinx",
    "ipykernel",
    "pandoc",
    "sphinx_rtd_theme",
    "sphinx-automodapi==0.7",
    "matplotlib",
    "hmf",
    "packaging",  # required for camb
]
dev = [
    {include-group = "tests"},
    {include-group = "docs"},
    "prek>=0.3.9",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
  "E",    # pycodestyle
  "W",    # pycodestyle warning
  "UP",   # pyupgrade
  "C90",  # mccabe complexity
   "I",    # isort
#   "N",    # pep8-naming
#   "D",    # docstyle
   # "ANN"   # type annotations
   "B",    # bugbear
   "A",    # builtins
   "C4",   # comprehensions
   "DTZ",  # datetime
   "FA",   # future annotations
   "PIE",  # flake8-pie
   "T",    # print statements
#   "PT",   # pytest-style
   "Q",    # quotes
   "SIM",  # simplify
   "PTH",  # use Pathlib
#   "ERA",  # kill commented code
   "NPY",  # numpy-specific rules
   "PERF", # performance
   # "FURB", # refurb
#   "RUF",  # ruff-specific rules
]
ignore = [
    "DTZ007",   # use %z in strptime
    "A003",     # class attribute shadows python builtin
    "B008",     # function call in argument defaults
]
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D103",  # ignore missing docstring in tests
    "T",     # print statements
]
"docs/conf.py" = [
    "A",  # conf.py can shadow builtins
    "ERA",
]
"docs/demos/*.ipynb" = [
    "T", # allow printing
]
[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.lint.mccabe]
max-complexity = 15
